--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: google_maps_cluster_manager
 description: Simple Flutter clustering library for Google Maps based on Geohash.
 version: 3.0.0+1
 homepage: https://github.com/bpillon/google_maps_cluster_manager
-
+publish_to: 'none'
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
